# Sage

./: .gitignore  COMMANDS.md  Cargo.toml  DATA_FORMAT.md  Dockerfile  Dockerfile.gpu  PROJECT_STATUS.md  README.md  TRAINING_DEPLOYMENT.md  TROUBLESHOOTING.md  corpus_cn.txt  docker-compose.yml
docs/: COMMANDS.md  DATA_FORMAT.md  DEPLOYMENT_GUIDE.md  PROJECT_STATUS.md  TRAINING_DEPLOYMENT.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
src/: data.rs  generation.rs  lib.rs  model.rs  quantization.rs  streaming.rs  tokenizer.rs  training.rs
src/api/: mod.rs
src/core/: generation.rs  kv_cache.rs  mod.rs  model.rs  tokenizer.rs
src/inference/: lazy_load.rs  mod.rs
src/quantization/: quantization.rs
src/tools/: export.rs  mod.rs  model_download.rs
src/training/: lora.rs  mod.rs  streaming.rs  training.rs
src/utils/: common.rs  error.rs  logger.rs  mod.rs  performance.rs
tests/: test_api_server.rs  test_kv_cache.rs  test_model.rs  test_performance.rs  test_tokenizer.rs
tmp/sage_model_formal/: config.json  model.mpk  tokenizer.json
tmp/sage_model_formal/checkpoint/: model-1.mpk  model-19.mpk  scheduler-1.mpk
