[package]
name = "sage"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.14.0", features = ["train", "wgpu", "dataset", "ndarray"] }
burn-ndarray = "0.14.0"
burn-wgpu = "0.14.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
clap = { version = "4.5.4", features = ["derive"] }
