[package]
name = "sage"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.14.0", features = ["train", "wgpu", "dataset", "ndarray"] }
burn-ndarray = "0.14.0"
burn-wgpu = "0.14.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
clap = { version = "4.5.4", features = ["derive"] }
memmap2 = "0.9"
tokenizers = "0.19.1"
ctrlc = "3.4"
indicatif = "0.17"
parking_lot = "0.12"
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json", "blocking"] }
axum = "0.7"
hyper = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tower = { version = "0.4", features = ["make"] }
async-stream = "0.3"
